--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@patrikvalkovic/eslint-config",
-  "version": "0.0.1",
+  "version": "0.0.11",
   "description": "Opinionated eslint config",
   "repository": {
     "type": "git",
@@ -19,31 +19,36 @@
     "url": "https://github.com/PatrikValkovic/eslint-config/issues"
   },
   "homepage": "https://github.com/PatrikValkovic/eslint-config#readme",
+  "files": [
+    "build/**/*"
+  ],
   "exports": {
     "./*": {
-      "types": "./build/types/*.d.ts",
-      "require": "./build/cjs/*.js",
-      "import": "./build/esm/*.js",
-      "default": "./build/esm/*.js"
+      "types": "./build/*.d.ts",
+      "require": "./build/*.js",
+      "default": "./build/*.js"
     }
   },
   "scripts": {
-    "build": "rimraf ./build && tsc --build ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json && node ./prepare-package-json.js",
+    "build": "rimraf ./build && tsc --build ./tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.14.11",
     "rimraf": "^6.0.1",
     "typescript": "^5.5.3"
   },
   "dependencies": {
     "@eslint/js": "^9.0.0",
-    "@patrikvalkovic/eslint-plugin-import-rule": "^1.0.3",
+    "@patrikvalkovic/eslint-plugin-import-rule": "^1.0.4",
+    "@stylistic/eslint-plugin-ts": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0-alpha.49",
     "@typescript-eslint/parser": "^8.0.0-alpha.49",
     "eslint": "^9.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-unused-imports": "^4.0.1",
     "typescript-eslint": "^8.0.0-alpha.49"
   }
 }
