--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
   "devDependencies": {
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.14.11",
+    "@types/ramda": "^0.30.1",
+    "globals": "^15.8.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.5.3"
   },
   "dependencies": {
     "@eslint/js": "^9.0.0",
     "@patrikvalkovic/eslint-plugin-import-rule": "^1.0.4",
+    "@stylistic/eslint-plugin": "^2.3.0",
     "@stylistic/eslint-plugin-ts": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0-alpha.49",
     "@typescript-eslint/parser": "^8.0.0-alpha.49",
@@ -49,6 +52,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-unused-imports": "^4.0.1",
+    "ramda": "^0.24.0",
     "typescript-eslint": "^8.0.0-alpha.49"
   }
 }
