--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@stylistic/eslint-plugin-ts": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0-alpha.49",
     "@typescript-eslint/parser": "^8.0.0-alpha.49",
+    "@typescript-eslint/utils": "^7.17.0",
     "eslint": "^9.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
