--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "eslint": "^9.0.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "typescript-eslint": "^8.0.0-alpha.49"
   }
 }
