--- a/package.json
+++ b/package.json
@@ -38,24 +38,24 @@
   },
   "devDependencies": {
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.14.11",
-    "globals": "^15.8.0",
+    "@types/node": "^20.16.10",
+    "globals": "^15.10.0",
     "rimraf": "^6.0.1",
-    "typescript": "^5.5.3"
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "@eslint/js": "^9.0.0",
     "@patrikvalkovic/eslint-plugin-import-rule": "^1.0.4",
-    "@stylistic/eslint-plugin": "^2.3.0",
-    "@stylistic/eslint-plugin-ts": "^2.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0-alpha.49",
-    "@typescript-eslint/parser": "^8.0.0-alpha.49",
-    "@typescript-eslint/utils": "^7.17.0",
+    "@stylistic/eslint-plugin": "^2.8.0",
+    "@stylistic/eslint-plugin-ts": "^2.8.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "@typescript-eslint/utils": "^8.8.0",
     "eslint": "^9.0.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "typescript-eslint": "^8.0.0-alpha.49"
+    "typescript-eslint": "^8.8.0"
   }
 }
