--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/node": "^20.16.10",
     "globals": "^15.10.0",
     "rimraf": "^6.0.1",
-    "typescript": "^5.6.2"
+    "typescript": "~5.5.4"
   },
   "dependencies": {
     "@eslint/js": "^9.0.0",
