--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@patrikvalkovic/eslint-config",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Opinionated eslint config",
   "repository": {
     "type": "git",
@@ -56,6 +56,7 @@
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "typescript-eslint": "^8.8.0"
   }
 }
