--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,10 +4,10 @@
     "allowUnusedLabels": false,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noPropertyAccessFromIndexSignature": false,
     "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "strict": true,
 
     "esModuleInterop": true,
